# neuroweave-timeline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  event_model.md  mcp.md  roadmap.md  standalone.md
examples/: README.md
examples/demo_project/: seed.py  walkthrough.md
nwt/: __init__.py
nwt/cli/: __init__.py  main.py
nwt/core/: __init__.py  errors.py  event.py  ids.py  relations.py
nwt/graph/: __init__.py  builder.py  lineage.py  visualize.py
nwt/mcp/: __init__.py  server.py
nwt/storage/: __init__.py  atomic.py  layout.py  reader.py  writer.py
nwt/timeline/: __init__.py  engine.py  summary.py
tests/: __init__.py  conftest.py  test_cli.py  test_engine.py  test_event.py  test_graph.py  test_storage.py  test_summary.py
